# TTB_Label_Verification_Build_Capstone

./: .env.example  .gitignore  AGENTS.md  DOCUMENTATION.md  README.md  product-build-overview.md  project-guidelines.md  render.yaml  vercel.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: batch.py  compare.py  dependencies.py  error_mapping.py  extract.py  health.py  request_parsing.py  verify.py  vision_selection.py
backend/app/core/: config.py  errors.py
backend/app/domain/: __init__.py  comparison.py  models.py  normalization.py  results.py
backend/app/services/: __init__.py  demo_vision.py  fake_vision.py  image_preprocess.py  openai_extraction.py  verification.py  vision.py  vision_errors.py
backend/app/tests/: test_batch_endpoint.py  test_compare_endpoint.py  test_comparison.py  test_config.py  test_live_checklist.py  test_verify_endpoint.py  test_vision.py  test_vision_dependencies.py
backend/app/use_cases/: __init__.py  batch_verification.py  error_mapping.py  recomparison.py  timeout.py  timing.py  verification.py
backend/scripts/: live_checklist.py
backend/tests/: test_batch_endpoint.py  test_compare_endpoint.py  test_comparison.py  test_config.py  test_extract_endpoint.py  test_health.py  test_live_checklist.py  test_logging.py  test_recomparison.py  test_verify_endpoint.py  test_vision.py  test_vision_dependencies.py
docs/: backend-architecture-interview-guide.html  deployed-timing-results.md  phase-6-checklist.md  phase-control.md  phase-handoff-template.md  phase-playbook.md  (+2 more)
(+66 files in other folders)
